--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -2,9 +2,10 @@
   <thead>
     <tr>
     <th>时间</th>
-    <th>赛程</th>
+    <th>联赛</th>
+    <th>球队</th>
     <th>信号</th>
-
+  
   </tr>
 
   </thead>
@@ -17,6 +18,9 @@
     </td>
     <td>
       <%= game.league %>
+    </td>
+    <td>
+      <%= game.description %>
     </td>
     <td>
     <%= game.signal %>
