--- a/app/views/admin/games/new.html.erb
+++ b/app/views/admin/games/new.html.erb
@@ -1,10 +1,12 @@
 <h1> 新增联赛 </h1>
 
-<%= simple_form_for @game do |f| %>
+<%= simple_form_for [:admin,@game] do |f| %>
 
 <%= f.input :time %>
 <%= f.input :league %>
+<%= f.input :description %>
 <%= f.input :signal %>
+
 
   <%= f.submit "Submit" %>
 <% end %>
