--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,3 +1,4 @@
+<h3>用户</h3>
 <table class="table table-bordered">
   <thead>
     <tr>
@@ -5,7 +6,7 @@
     <th>联赛</th>
     <th>球队</th>
     <th>信号</th>
-  
+
   </tr>
 
   </thead>
@@ -23,10 +24,10 @@
       <%= game.description %>
     </td>
     <td>
-    <%= game.signal %>
+    <%= link_to(game.signal,admin_game_path(game), :class => "btn btn-default")  %>
     </td>
 
   </tr>
   <% end %>
-</tbody>
-</table>
+  </tbody>
+  </table>
