--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -4,6 +4,28 @@
         <div class="navbar-header">
             <a class="navbar-brand" href="/">Ball Game </a>
         </div>
+   <a class="btn btn-default" href=https://en.wikipedia.org/wiki/Basketball>
+   <i class="fas fa-basketball-ball"></i>篮球
+   </a>
+
+   <a class="btn btn-default" href=https://en.wikipedia.org/wiki/Association_football>
+   <i class="fas fa-futbol"></i>足球
+   </a>
+   <a class="btn btn-default" href="#">
+   <i class="far fa-baseball-ball"></i>棒球
+   </a>
+   <a class="btn btn-default" href="#">
+   <i class="fas fa-bowling-pins"></i>保龄球
+   </a>
+   <a class="btn btn-default" href="#">
+   <i class="far fa-volleyball-ball"></i>排球
+ </a>
+
+   <a class="btn btn-default" href="#">
+   <i class="fas fa-baseball"></i>棒球
+ </a>
+
+
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
