--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,11 @@
-<h1> Hello World! </h1>
+<i class="fa fa-camera-retro fa-lg"></i> fa-lg <br>
+
+<i class="fa fa-camera-retro fa-lg"></i> fa-lg
+<br>
+<i class="fa fa-camera-retro fa-2x"></i> fa-2x<br>
+
+<i class="fa fa-spinner fa-spin"></i> fa-3x<br><br>
+
+<i class="fa fa-camera-retro fa-4x"></i> fa-4x
+<br>
+<i class="fa fa-camera-retro fa-5x"></i> fa-5x
