--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -3,27 +3,28 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <a class="navbar-brand" href="/">Ball Game </a>
+
         </div>
-   <a class="btn btn-default" href=https://en.wikipedia.org/wiki/Basketball>
-   <i class="fas fa-basketball-ball"></i>篮球
-   </a>
+        <a class="btn btn-default" href=https://en.wikipedia.org/wiki/Basketball>
+        <i class="fas fa-basketball-ball "></i>篮球
+      </a>
 
-   <a class="btn btn-default" href=https://en.wikipedia.org/wiki/Association_football>
-   <i class="fas fa-futbol"></i>足球
-   </a>
-   <a class="btn btn-default" href="#">
-   <i class="far fa-baseball-ball"></i>棒球
-   </a>
-   <a class="btn btn-default" href="#">
-   <i class="fas fa-bowling-pins"></i>保龄球
-   </a>
-   <a class="btn btn-default" href="#">
-   <i class="far fa-volleyball-ball"></i>排球
- </a>
+        <a class="btn btn-default" href=https://en.wikipedia.org/wiki/Association_football>
+        <i class="fas fa-futbol"></i>足球
+        </a>
+        <a class="btn btn-default" href=https://en.wikipedia.org/wiki/Association_football>
+        <i class="far fa-baseball-ball"></i>棒球
+        </a>
+        <a class="btn btn-default" href=https://en.wikipedia.org/wiki/Ten-pin_bowling>
+        <i class="fas fa-bowling-pins"></i>保龄球
+        </a>
+        <a class="btn btn-default" href=https://zh.wikipedia.org/wiki/%E6%8E%92%E7%90%83>
+        <i class="far fa-volleyball-ball"></i>排球
+      </a>
 
-   <a class="btn btn-default" href="#">
-   <i class="fas fa-baseball"></i>棒球
- </a>
+        <a class="btn btn-default" href=https://zh.wikipedia.org/wiki/%E6%A3%92%E7%90%83>
+        <i class="fas fa-baseball"></i>棒球
+      </a>
 
 
 
