--- a/app/views/admin/games/index.html.erb
+++ b/app/views/admin/games/index.html.erb
@@ -1,7 +1,10 @@
 <div class="pull-right">
-  <%= link_to("增加赛程", new_admin_game_path, :class => "btn btn-default" ) %>
+  <%= link_to("增加🏀篮球", new_basketball_path, :class => "btn btn-default" ) %>
 </div>
 
+<div class="pull-right">
+  <%= link_to("增加⚽️足球", new_football_path, :class => "btn btn-default" ) %>
+</div>
 
 <br><br>
 
