--- a/app/views/basketballs/new.html.erb
+++ b/app/views/basketballs/new.html.erb
@@ -1,6 +1,6 @@
-<h1> 新增联赛 </h1>
+<h1> 新增篮球🏀联赛 </h1>
 
-<%= simple_form_for [:admin,@game] do |f| %>
+<%= simple_form_for @basketball do |f| %>
 
 <%= f.input :time %>
 
