--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,3 +1,8 @@
+<div class="pull-right">
+  <%= link_to("篮球🏀赛程", basketballs_path, :class => "btn btn-default" ) %>
+</div><div class="pull-right">
+  <%= link_to("足球⚽️赛程", footballs_path, :class => "btn btn-default" ) %>
+</div>
 <h3>用户</h3>
 <table class="table table-bordered">
   <thead>
